--- a/examples/sveltekit-node-docker-main/package.json
+++ b/examples/sveltekit-node-docker-main/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "sveltekit",
+	"name": "sveltekit-node-docker",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
@@ -16,9 +16,8 @@
 		"@fontsource/fira-mono": "^4.5.10",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-node": "^1.2.1",
-		"@sveltejs/kit": "^1.5.0",
+		"@sveltejs/adapter-node": "^1.0.0",
+		"@sveltejs/kit": "^1.0.0",
 		"@types/cookie": "^0.5.1",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
@@ -28,7 +27,7 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
+		"svelte-check": "^2.9.2",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
